5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1635_2703.log
== TEST (2019-04-08 15:45:26) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else(idade <18):
	mensagem = "nao_eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else(idade <18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:40) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else():
	mensagem = "nao_eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:48) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
	mensagem = "nao_eleitor"
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:45:57) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
	mensagem = "nao_eleitor"
	print(mensagem)
-- EXECUTION TIME:
0.196614
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:59) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
	mensagem = "nao_eleitor"
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:46:11) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
	mensagem = "nao_eleitor"
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:46:25) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
 mensagem = "nao_eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 6
    print(mensagem)
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:46:31) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
mensagem = "nao_eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem = "nao_eleitor"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:18) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem= "eleitor"
else:
	mensagem = "nao_eleitor"
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:35) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem="eleitor"
else:
	mensagem="nao_eleitor"
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:48:00) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem="eleitor"
else:
	mensagem="nao_eleitor"
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:48:05) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem="eleitor"
else:
	mensagem="nao_eleitor"
	print(mensagem)
-- EXECUTION TIME:
0.199958
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:48:22) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem="eleitor"
else:
	mensagem="nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:48:31) 
-- CODE:
idade= int(input("idade:"))
if (idade>=18):
	 mensagem="eleitor"
else:
	mensagem="nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.197527
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
